[package]
name = "treebitmap"
version = "0.4.0"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>", "Jakub Onderka <ahoj@jakubonderka.cz>"]
description = "Fast IPv4/IPv6 lookup trie."
license = "MIT"
repository = "https://github.com/hroi/treebitmap"
documentation = "https://docs.rs/treebitmap/"
readme = "README.md"
keywords = ["ip", "networking", "trie", "cidr"]
categories = ["data-structures", "network-programming"]

[dev-dependencies]
rand = "0.7.2"

[badges]
travis-ci = { repository = "hroi/treebitmap" }

[features]
alloc = []
